<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#FAFBFD"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6230BF"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/registration"
        style="@style/Widget.MaterialComponents.Toolbar.Primary">

    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:id="@+id/ivLogo2"
        android:layout_width="391dp"
        android:layout_height="149dp"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo2" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/ivLogo2"
        android:paddingHorizontal="20dp"
        android:id="@+id/met1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/name"
            android:drawableStart="@drawable/ic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/met1"
        android:id="@+id/met2"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/email_id"
            android:drawableStart="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/met2"
        android:id="@+id/met3"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/met3"
        android:id="@+id/met4"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_confirmpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/met4"
        android:id="@+id/met5"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/enter_mobile"
            android:drawableStart="@drawable/ic_entermobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/met5">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:id="@+id/rb1"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:id="@+id/rb2"
        android:layout_marginLeft="30dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/rb"
        android:onClick="clickLogin"
        android:textStyle="bold"
        android:layout_marginHorizontal="40dp"
        android:textSize="20dp"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>