<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/contacts"
        android:background="#13A583"
        app:menu="@menu/menu"
        app:navigationIcon="@drawable/ic_garis3"
        style="@style/Widget.MaterialComponents.Toolbar.Primary">

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_name"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    app:hintTextColor="#373636">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="30"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/MyTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.55"
                        android:hint="@string/phone"
                        app:hintTextColor="#373636">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:maxLength="12"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.45"
                        android:hint="@string/area"
                        app:hintTextColor="#373636"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        app:boxStrokeColor="@color/edit_text_box_border"
                        app:endIconTint="@color/edit_text_box_border">
                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/autoAreaTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null"
                            android:imeOptions="actionNext"
                            android:inputType="none"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_address"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    app:hintTextColor="#373636">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:imeOptions="actionNext"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_address"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:visibility="invisible"/>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    app:hintTextColor="#373636">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:imeOptions="actionNext"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:visibility="invisible"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.55"
                        android:hint="@string/state"
                        app:hintTextColor="#373636"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        app:boxStrokeColor="@color/edit_text_box_border"
                        app:endIconTint="@color/edit_text_box_border">
                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/autoStateTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null"
                            android:imeOptions="actionNext"
                            android:inputType="none"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/MyTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.45"
                        android:hint="@string/zip"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        app:hintTextColor="#373636">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="6"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:hintTextColor="#373636">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_birthday"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday"
                    app:hintTextColor="#373636"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_calender">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:imeOptions="actionDone"
                        android:inputType="date"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</LinearLayout>